# cashcast_flow

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  PACKAGE_OVERVIEW.md  README.md  baseline.json  delta.json  docker-compose.yml  env.example  ftwin.config.example.json  pyproject.toml  requirements.txt  scen.json
.github/workflows/: ci.yml
ftwin_core/: __init__.py  cli.py
ftwin_core/domain/: __init__.py  models.py
ftwin_core/io/: __init__.py  config.py  ledger.py
ftwin_core/services/: __init__.py  forecaster.py  forecaster_ensemble.py  forecaster_prophet.py  pipeline.py  scenario.py  simulator.py  suggestions.py  training.py
scripts/: generate_kaggle_lora_notebook.py
server/: manage.py
server/financial_twin/: __init__.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
server/server/: __init__.py  celery.py  settings.py  urls.py
tests/: test_cli_flow.py  test_simulator_metrics.py
tests/data/: ledger.csv
